ruka-lang.org/src/lib/interpreter/fixtures/type-err/unknown-record-field.ruka
// expect: unknown field
let Point = record { x: int, y: int }
let main = () do
    let p: Point = .{ x = 1, y = 2, z = 3 }
end
